--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.27.1"
 Flask = "^2.1.2"
 Flask-Cors = "^3.0.10"
 Flask-SQLAlchemy = "^2.5.1"
+marshmallow-sqlalchemy = "^0.28.0"
+flask-marshmallow = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
