--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,11 @@
         "mziumbe",
         "sqlalchemy",
         "taskhub"
-    ]
+    ],
+    "python.formatting.provider": "black",
+    "python.testing.pytestArgs": [
+        "api"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
