--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,7 @@
 backend/venv
 frontend/node_modules
-frontend/package-lock.json
-frontend/package.json
-frontend/ts-config.json
-# dependencies
-frontend/node_modules
-frontend/.pnp
-frontend/.pnp.js
-
-# testing
-frontend/coverage
-
-# production
-frontend/build
-
-# misc
-frontend/.DS_Store
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
-frontend/package-lock.json
-frontend/.gitignore
-frontend/src/accurateTimer.js
-frontend/.vscode/launch.json
-frontend/.gitignore
-api/api/__init__.py
-api/api/app.py
-api/api/database.db
-api/api/models.py
-api/api/routes.py
-api/api/test_data.py
-api/api/test_load_data.py
-api/api/test_routes.py
-api/api/__pycache__/__init__.cpython-39.pyc
-api/api/__pycache__/app.cpython-39.pyc
-api/api/__pycache__/models.cpython-39.pyc
-api/api/__pycache__/routes.cpython-39.pyc
-api/api/__pycache__/test_data.cpython-39.pyc
-api/api/app/database.db
-api/api/app/__pycache__/__init__.cpython-39.pyc
-api/api/app/__pycache__/app.cpython-39.pyc
-api/api/app/__pycache__/config.cpython-39.pyc
-api/api/app/__pycache__/load_test_data.cpython-39.pyc
-api/api/app/__pycache__/models.cpython-39.pyc
-api/api/app/__pycache__/routes.cpython-39.pyc
-api/api/app/__pycache__/test_data.cpython-39-pytest-5.4.3.pyc
-api/api/app/__pycache__/test_data.cpython-39.pyc
-api/api/app/__pycache__/wsgi.cpython-39.pyc
-api/api/test/database.db
-api/api/test/__pycache__/__init__.cpython-39.pyc
-api/tests/__init__.py
-api/tests/test_api.py
-api/api/__init__.py
-api/api/app.py
-api/api/database.db
-api/api/models.py
-api/api/routes.py
-api/api/test_data.py
-api/api/test_load_data.py
-api/api/test_routes.py
-api/api/__pycache__/__init__.cpython-39.pyc
-api/api/__pycache__/app.cpython-39.pyc
-api/api/__pycache__/models.cpython-39.pyc
-api/api/__pycache__/routes.cpython-39.pyc
-api/api/__pycache__/test_data.cpython-39.pyc
-api/tests/__init__.py
-api/tests/test_api.py
+api/api/__pycache__/
+api/api/test/__pycache__/
+api/api/__pycache__/
 .vscode/launch.json
 .gitignore
