--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,7 @@ COPY package.json ./
 COPY package-lock.json ./
 COPY tsconfig.json ./
 RUN npm install --silent
+RUN npm install typescript --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
 COPY . ./
