--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,14 @@ services:
     volumes: 
     - ./api:/api/
     environment: 
-      FLASK_ENV: development
+      FLASK_ENV: production
   frontend:
     build: 
       context: ./frontend
     image: taskhub-frontend
     volumes: 
     - ./frontend:/frontend/
+    - ./frontend/node_modules
     ports: 
       - "3000:3000"
     depends_on: 
