--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: taskhub-frontend
     volumes: 
     - ./frontend:/frontend/
-    - ./frontend/node_modules
+    - /frontend/node_modules
     ports: 
       - "3000:3000"
     depends_on: 
