--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,11 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@mui/x-data-grid": "^5.11.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^16.11.33",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
-    "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +43,14 @@
   },
   "devDependencies": {
     "@types/react-table": "^7.7.12",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^16.11.33",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "ts-node": "^10.7.0"
   }
 }
