--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.8"
 services:
   api:
+    stdin_open: true
+    tty: true
     build:  
       context: ./api
     ports: 
@@ -10,10 +12,12 @@ services:
     environment: 
       FLASK_ENV: production
   frontend:
+    stdin_open: true
+    tty: true
     build: 
       context: ./frontend
     volumes: 
-    - ./frontend:/frontend/
+    - ./frontend:/frontend/src
     ports: 
       - "3000:3000"
     depends_on: 
