add prod for frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     tty: true
     build: 
       context: ./frontend
+      dockerfile: Dockerfile.prod
     volumes: 
     - ./frontend:/frontend/src
     ports: 
