--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -13,3 +13,5 @@ RUN npm run build
 FROM nginx
 
 COPY --from=build /frontend/build /usr/share/nginx/html
+
+COPY --from=build /frontend/nginx.default.conf /etc/nginx/conf.d/default.conf
