--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,5 +52,6 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "ts-node": "^10.7.0"
-  }
+  },
+  "proxy": "http://api:5000"
 }
