--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,8 +8,10 @@ services:
       dockerfile: Dockerfile.prod
     ports: 
     - "5000:5000"
-    environment: 
-      FLASK_ENV: production
+    env_file:
+      - ./.env.prod
+    depends_on:
+      - db
   frontend:
     stdin_open: true
     tty: true
@@ -20,3 +22,12 @@ services:
       - "8080:80"
     depends_on: 
       - api
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - postgres_data_prod:/var/lib/postgresql/data/
+    env_file:
+      - ./.env.prod.db
+
+volumes:
+  postgres_data_prod:
