changes to docker compose

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -21,6 +21,7 @@ services:
       dockerfile: Dockerfile.dev
     volumes: 
     - ./frontend:/frontend
+    - /frontend/node_modules
     ports: 
       - "3000:3000"
     depends_on: 
