--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 backend/venv
 frontend/node_modules
 frontend/build
-api/api/__pycache__/
-api/api/test/__pycache__/
-api/api/__pycache__/
+*/__pycache__/*
 .vscode/launch.json
 .gitignore
-api/api/app/__pycache__/
-frontend/node_modules/
-api/api/app/__pycache__/
-api/api/app/main/__pycache__/
