--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -14,6 +14,7 @@ Flask-SQLAlchemy = "^2.5.1"
 marshmallow-sqlalchemy = "^0.28.0"
 flask-marshmallow = "^0.14.0"
 gunicorn = "^20.1.0"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
