--- a/frontend/nginx.default.conf
+++ b/frontend/nginx.default.conf
@@ -1,11 +1,14 @@
 server {
     listen       80;
     listen  [::]:80;
+    
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+
     server_name  localhost;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        try_files $uri $uri/ =404;
     }
 
     location /api {
