--- a/frontend/nginx.default.conf
+++ b/frontend/nginx.default.conf
@@ -1,11 +1,11 @@
 server {
-    listen       80;
-    listen  [::]:80;
+    listen       8080;
+    listen  [::]:8080;
     
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
-    server_name  munatsi.dev taskhub.munatsi.dev localhost;
+    server_name  taskhub.munatsi.dev;
 
     location / {
         try_files $uri $uri/ =404;
